--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
     <script src="clock.js" lang="javascript"></script>
     <script src="gameObjects.js" lang="javascript"></script>
     <script src="containers.js" lang="javascript"></script>
+    <script src="webStorage.js" lang="javascript"></script>
+    <script src="fonts.js" lang="javascript"></script>
+    <script src="jukebox.js" lang="javascript"></script>
+    <script src="scenesManager.js" lang="javascript"></script>
     <body>
 
         <canvas id="canvas" width="640" height="480"></canvas>
@@ -48,6 +52,9 @@
             const keyboardIO = new KeyboardIO();
             const touchIO = new TouchIO();
             const mouseIO = new MouseIO();
+            const webStorage = new WebStorage();
+            const myJukebox = new Jukebox();
+            const scenesManager = new ScenesManager();
 
             game.include(animator);
             game.include(collisions);
@@ -56,6 +63,17 @@
             game.include(keyboardIO);
             game.include(touchIO);
             game.include(mouseIO);
+            game.include(scenesManager);
+
+            Fonts.buildFont("spectrumBold", "./examples/zxBold.ttf");
+            Fonts.buildFont("spectrumNormal", "./examples/zxNormal.ttf");
+
+            // saving some data into the storage
+            let data = webStorage.getJson("myData");
+            if (data === null) { data = { "counter": 0 }; }
+            data.counter++;
+            webStorage.setData(data, "myData", WebStorage.STORAGE_TYPES.JSON);
+            //
 
             const cloneContainer = Containers.create("dotBluePrint", {
                 init: function (params) {
@@ -64,7 +82,14 @@
                 },
                 update: function (delta) {
                     this.y++;
-                    if (this.y > 480) { this.destroy(); }
+                    if (this.y > 480) {
+                        //when dies, play a sound
+                        myJukebox.play();
+                        //and creates a new one randomly
+                        cloneContainer.cloneObject({ x: parseInt(Math.random() * 500) + 10, y: parseInt(Math.random() * 30) });
+                        //and remove this one
+                        this.destroy(); 
+                    }
                 },
                 draw: function (context) {
                     context.fillStyle = "yellow";
@@ -74,22 +99,21 @@
 
             touchIO.registerTouch(function (c) { console.log(c); });
 
-            resourceManager.addGraphic({ 
-                name: "graphics", 
-                source: "./examples/jumpingBase.png" 
-            });
+            resourceManager.addGraphic({ name: "graphics", source: "./examples/jumpingBase.png" });
 
             // defining the sounds of the game
-            var sources = {};
+            let sources = {};
             sources[ResourcesManager.SOUND_FORMATS.WAVE] = { source: "./examples/ezq.wav" };
             sources[ResourcesManager.SOUND_FORMATS.OGG] = { source: "./examples/ezq.ogg" };
             sources[ResourcesManager.SOUND_FORMATS.MP3] = { source: "./examples/ezq.mp3" };
             
             // adding the sound to the resource manager
-            resourceManager.addSound({ 
-                name: "music", 
-                sources: sources
-            });
+            resourceManager.addSound({ name: "music", sources: sources });
+
+            sources = {};
+            sources[ResourcesManager.SOUND_FORMATS.OGG] = { source: "./examples/explosion.ogg" };
+            sources[ResourcesManager.SOUND_FORMATS.MP3] = { source: "./examples/explosion.mp3" };
+            resourceManager.addSound({ name: "explosion", sources: sources });
 
             // creating an object from the hierarchy game objects
             let redRectangleObject = new VisualGameObject(crypto.randomUUID(), 0, 0, 100, 100, 0, true);
@@ -110,7 +134,6 @@
                 context.fillStyle = '#FF0000';
                 context.fillRect(this.x, this.y, this.width, this.height);
             };
-            //
 
             // inline visual game object
             let blueRectangleObject = {
@@ -138,13 +161,34 @@
                     context.fillRect(this.x, this.y, this.width, this.height);
                 }
             };
-            //
 
             // creating a visual game object from a class
             let fallingGuyObject = new FallingGuy();
 
+            // creating a visual game object to display fonts
+            let textDisplayObject = {
+                name: crypto.randomUUID(),
+                isVisible: true,
+                draw: function(context) {
+                    context.fillStyle = '#FFFFFF';
+                    context.font = "30pt spectrumBold";
+                    context.fillText("Spectrum TTF bold", 50, 50);
+
+                    context.font = "30pt spectrumNormal";
+                    context.fillText("Spectrum TTF normal", 50, 150);
+                }
+            };
+
+            // instead of adding each individual object into the renderable ones, we add them through a scene
+            scenesManager.create("main", [redRectangleObject, blueRectangleObject, fallingGuyObject, textDisplayObject, cloneContainer]);
+
             resourceManager.onResourcesLoadedCompleted = function () {
                 console.log("All resources loaded!");
+
+                // we use the audio loaded by the resource manager to set the jukebox source and create 5 channels
+                myJukebox.setSource(resourceManager.SOUNDS.explosion);
+                myJukebox.createChannels(5);
+                myJukebox.volume(0.2);
 
                 // creating the sprites
                 sprites.createCollection("fallingGuy", resourceManager.GRAPHICS.graphics.image, 
@@ -158,10 +202,19 @@
                 sprites.SPRITES_BAG.fallingGuy.reset();
 
                 // adding the objects to the game
-                game.createObject(redRectangleObject);
+                // note: this can be done using the scene manager
+                /*game.createObject(redRectangleObject);
                 game.createObject(blueRectangleObject);
                 game.createObject(fallingGuyObject);
                 game.createObject(cloneContainer);
+                game.createObject(textDisplayObject);*/
+
+                scenesManager.scenes.main.activate();
+
+                // we clone some objects from the container
+                for (let i = 0; i < 10; i++) {
+                    cloneContainer.cloneObject({ x: parseInt(Math.random() * 500) + 10, y: 1 });
+                }
             };
 
             game.start();
