fixed references to v1

--- a/v1_games/Galaga/index.html
+++ b/v1_games/Galaga/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 </head>
-<script language="Javascript" src="../../Framework/jsGFwk.js"></script>
-<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
-<script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
-<script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
+<script language="Javascript" src="../../v1_deprecated/jsGFwk.js"></script>
+<script language="Javascript" src="../../v1_deprecated/jsGFwkBasicAnimation.js"></script>
+<script language="Javascript" src="../../v1_deprecated/jsGFwkRM.js"></script>
+<script language="Javascript" src="../../v1_deprecated/jsGFwkIO.js"></script>
 <body style="background-color:#CCCCCC;">
 	<canvas id="canvas" width="320" height="240"></canvas>
 </body>
