--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,9 @@
         <canvas id="canvas" width="640" height="480"></canvas>
 
         <script>
+            // placeholder for a merged image
+            let mergedImage = new Image();
+
             class FallingGuy extends jsGFwk.VisualGameObject {
 
                 constructor() {
@@ -26,6 +29,9 @@
 
                 draw(context) {
                     context.drawImage(sprites.SPRITES_BAG.fallingGuy.sprite.image, this.x, this.y);
+
+                    // we display the merged image on the right top corner
+                    context.drawImage(mergedImage, 500, 10);
                 }
             }
         </script>
@@ -182,7 +188,18 @@
 					[{left: 409, top: 34, width: 66, height: 26},
 					 {left: 480, top: 34, width: 66, height: 26},
 					 {left: 558, top: 34, width: 66, height: 26}],
-                    /*ImageFilters.INVERTCOLOR*/);
+                    /*jsGFwk.ImageFilters.INVERTCOLOR*/);
+
+                // we take two sections from the main sprite sheet and create a merged one
+                mergedImage = jsGFwk.ImageManipulation.merge({
+					image: resourceManager.GRAPHICS.graphics.image,
+					crop: {x: 10, y: 0, width: 56, height: 26},
+					target: {x: 50, y: 20, width: 56, height: 26}
+				}, {
+					image: resourceManager.GRAPHICS.graphics.image,
+					crop: {x: 0, y: 0, width: 66, height: 26},
+					target: {x: 0, y: 0, width: 66, height: 26}
+				}, { width: 100, height: 100, filter: jsGFwk.ImageFilters.GRAYSCALE });
 
                 // reseting the sprites
                 sprites.SPRITES_BAG.fallingGuy.loop(true);
