Updated scenemanager to be consistent in the usage of UPPER CASE groupings

--- a/examples/index.html
+++ b/examples/index.html
@@ -213,7 +213,7 @@
                 game.createObject(cloneContainer);
                 game.createObject(textDisplayObject);*/
 
-                scenesManager.scenes.main.activate();
+                scenesManager.SCENES.main.activate();
 
                 // we clone some objects from the container
                 for (let i = 0; i < 10; i++) {
