--- a/games/notAlone/index.html
+++ b/games/notAlone/index.html
@@ -12,7 +12,7 @@
         <script src="./scripts/main.js" lang="javascript"></script>
     </head>
     <body>
-        <canvas id="canvas" width="640" height="480"></canvas>
+        <canvas id="canvas" width="640" height="480" style="width: 100%; height: 100%;"></canvas>
     </body>
     <script>
         game.start();
