--- a/v1_games/asadator/index.html
+++ b/v1_games/asadator/index.html
@@ -2,21 +2,21 @@
     <head>
         <title>Asadator!</title>
     </head>
-    <script language="Javascript" src="../../Framework/jsGFwk.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwk2dFastAnimation.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkContainer.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkCollisions.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkSprites.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkScenes.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkFonts.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkEffects.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkGamepad.js"></script>
-    <script language="Javascript" src="../../Framework/jsGFwkJukebox.js"></script>
-    <script language="Javascript" src="../../Framework/jsGFwkTimers.js"></script>
-    <script language="Javascript" src="../../Framework/jsGFwkDebugger.js"></script>
-    <script language="Javascript" src="../../Framework/jsGFwkWebStorage.js"></script>
+    <script language="Javascript" src="../../v1_deprecated/jsGFwk.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwk2dFastAnimation.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkContainer.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkIO.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkCollisions.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkRM.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkSprites.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkScenes.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkFonts.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkEffects.js"></script>
+	<script language="Javascript" src="../../v1_deprecated/jsGFwkGamepad.js"></script>
+    <script language="Javascript" src="../../v1_deprecated/jsGFwkJukebox.js"></script>
+    <script language="Javascript" src="../../v1_deprecated/jsGFwkTimers.js"></script>
+    <script language="Javascript" src="../../v1_deprecated/jsGFwkDebugger.js"></script>
+    <script language="Javascript" src="../../v1_deprecated/jsGFwkWebStorage.js"></script>
     <body style="border:0; margin:0; padding:0; background-color: black;">
         <div style="width: 100%; 
                     height: 100vh;
