--- a/games/TheHuntForYongoYongo/index.html
+++ b/games/TheHuntForYongoYongo/index.html
@@ -22,7 +22,7 @@
     
 	<body>
         <div class="yongo-container">
-            <img src="images/yongoBig.png">
+            <img src="game/images/yongoBig.png">
         </div>
 		<div class="canvas-container">
 			<canvas width="640" height="150" id="timerCanvas"></canvas>
